syntax = "proto3";
package auth;
option go_package = "./internal/auth/pb";

service AuthService {
  rpc SignUp(SignUpRequest) returns (SignUpResponse) {}
  rpc CheckUser(CheckUserRequest) returns (CheckUserResponse) {}
  rpc VerifyPhone(VerifyPhoneRequest) returns (VerifyPhoneResponse) {}
}

//SignUp
message SignUpRequest {
  string phoneNumber = 1;
  string password = 2;
  string name = 3;
  string surname = 4;
  string dateOfBirth = 5;
}

message SignUpResponse {
  int64 status = 1;
  string error = 2;
}

//SendCode
message CheckUserRequest {
  string phoneNumber = 1;
}

message CheckUserResponse {
  int64 status = 1;
  string error = 2;
}

//VerifyPhone
message VerifyPhoneRequest {
  string phoneNumber = 1;
  string code = 2;
}

message VerifyPhoneResponse {
  int64 status = 1;
  string error = 2;
}